Basic CSS styles for header; get images in slider dir

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,10 @@
 header {
-  background: url("../images/big-ears-festival-2016-header.jpg") no-repeat; }
+  background: url("../images/big-ears-festival-2016-header.jpg") no-repeat;
+  background-size: cover; }
+
+.container {
+  margin: auto;
+  padding: 35px;
+  max-width: 960px; }
 
 /*# sourceMappingURL=styles.css.map */
