Position slider image in correct position

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,18 @@
 header {
   background: url("../images/big-ears-festival-2016-header.jpg") no-repeat;
   background-size: cover; }
+  header .logo {
+    float: left; }
+  header .slider {
+    float: right;
+    padding-left: 12px;
+    margin-left: 12px;
+    border-left: 1px solid #fff; }
 
 .container {
   margin: auto;
   padding: 35px;
-  max-width: 960px; }
+  max-width: 960px;
+  overflow: hidden; }
 
 /*# sourceMappingURL=styles.css.map */
