--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,22 @@ header {
     float: left; }
   header .slider {
     float: right;
-    padding-left: 12px;
-    margin-left: 12px;
+    padding-left: 24px;
+    margin-left: 24px;
     border-left: 1px solid #fff; }
+    header .slider ul {
+      list-style: none;
+      margin-left: 0;
+      padding-left: 0; }
+    header .slider .slider-arrow {
+      display: inline-block;
+      width: 29px;
+      height: 29px;
+      padding: 0 3px; }
+      header .slider .slider-arrow.arrow-left {
+        background: url("../images/slider-arrow-left.png") no-repeat; }
+      header .slider .slider-arrow.arrow-right {
+        background: url("../images/slider-arrow-right.png") no-repeat; }
 
 .container {
   margin: auto;
