--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -15,9 +15,30 @@ header {
 	
 	.slider {
 		float: right;
-		padding-left: 12px;
-		margin-left: 12px;
+		padding-left: 24px;
+		margin-left: 24px;
 		border-left: 1px solid #fff;
+		
+		ul {
+			list-style: none;
+			margin-left: 0;
+			padding-left: 0;
+		}
+		
+		.slider-arrow {
+			display: inline-block;
+			width: 29px;
+			height: 29px;
+			padding: 0 3px;
+			
+			&.arrow-left {
+				background: url('../images/slider-arrow-left.png') no-repeat;	
+			}
+			
+			&.arrow-right {
+				background: url('../images/slider-arrow-right.png') no-repeat;
+			}
+		}
 	}
 }
 
