--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,16 @@
+body {
+  background-color: #f2f2f2; }
+
 header {
   background: url("../images/big-ears-festival-2016-header.jpg") no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  text-align: center;
+  max-height: 350px; }
   header .logo {
     float: left; }
   header .slider {
     float: right;
+    text-align: left;
     padding-left: 24px;
     margin-left: 24px;
     border-left: 1px solid #fff; }
@@ -12,28 +18,52 @@ header {
       list-style: none;
       margin-left: 0;
       padding-left: 0; }
-    header .slider .slider-arrow {
+    header .slider span {
       -webkit-transition: all 0.5s;
       transition: all 0.5s;
       display: inline-block;
       width: 29px;
       height: 29px;
       padding: 0 3px; }
-      header .slider .slider-arrow:hover {
+      header .slider span:hover {
         cursor: pointer; }
-      header .slider .slider-arrow.arrow-left {
+      header .slider span.arrow-left {
         background: url("../images/slider-arrow-left.png") no-repeat; }
-        header .slider .slider-arrow.arrow-left:hover {
+        header .slider span.arrow-left:hover {
           background: url("../images/slider-arrow-left-hover.png") no-repeat; }
-      header .slider .slider-arrow.arrow-right {
+      header .slider span.arrow-right {
         background: url("../images/slider-arrow-right.png") no-repeat; }
-        header .slider .slider-arrow.arrow-right:hover {
+        header .slider span.arrow-right:hover {
           background: url("../images/slider-arrow-right-hover.png") no-repeat; }
+  header nav {
+    clear: both;
+    display: inline-block;
+    margin-top: 35px;
+    padding: 30px 50px;
+    text-align: center;
+    background: url("../images/gradient-repeater.jpg") repeat-x;
+    -webkit-box-shadow: 0px -12px 20px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px -12px 20px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px -12px 20px 0px rgba(0, 0, 0, 0.25); }
+    header nav a {
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+      display: inline-block;
+      width: 320px;
+      height: 82px; }
+      header nav a.tickets {
+        background: url("../images/buy-2016-pre-sale-tickets.png") no-repeat;
+        padding-right: 30px; }
+        header nav a.tickets:hover {
+          background: url("../images/buy-2016-pre-sale-tickets-hover.png") no-repeat; }
+      header nav a.last-year {
+        background: url("../images/see-last-years-event.png") no-repeat; }
+        header nav a.last-year:hover {
+          background: url("../images/see-last-years-event-hover.png") no-repeat; }
 
 .container {
   margin: auto;
   padding: 35px;
-  max-width: 960px;
-  overflow: hidden; }
+  max-width: 960px; }
 
 /*# sourceMappingURL=styles.css.map */
