--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,6 +24,24 @@ span {
 	display: inline-block;
 }
 
+.container, main {
+	margin: auto;
+	padding: 35px;
+	max-width: 960px;
+}
+
+h1 {
+	font-family: 'nimbus-sans-condensed', 'Helvetica', sans-serif;
+	font-size: 32px;
+	line-height: 37px;
+	color: #000;
+	margin-bottom: 10px;
+}
+
+h3 {
+	font-family: 'proxima-nova-bold', sans-serif;
+}
+
 // Header
 header {
 	@include bg-image('big-ears-festival-2016-header.jpg');
@@ -132,9 +150,7 @@ header {
 	}
 }
 
-.container {
-	margin: auto;
-	padding: 35px;
-	max-width: 960px;
-	//overflow: hidden;
+// Body
+main {
+	margin-top: 35px;
 }
