--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,23 @@
 body {
-  background-color: #f2f2f2; }
+  background-color: #f2f2f2;
+  color: #686b72; }
 
 span {
   display: inline-block; }
 
-.container, main {
+a {
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  color: #7f873f;
+  text-decoration: none; }
+  a:hover {
+    color: #4c5438;
+    text-decoration: underline; }
+
+main, .container {
   margin: auto;
   padding: 35px;
   max-width: 960px; }
@@ -16,8 +29,14 @@ h1 {
   color: #000;
   margin-bottom: 10px; }
 
+body, h3 {
+  font-family: 'proxima-nova', 'Helvetica', sans-serif;
+  font-size: 16px;
+  line-height: 20px; }
+
 h3 {
-  font-family: 'proxima-nova-bold', sans-serif; }
+  color: #000;
+  margin: 6px 0; }
 
 header {
   background: url("../images/big-ears-festival-2016-header.jpg") no-repeat;
@@ -37,8 +56,11 @@ header {
       margin-left: 0;
       padding-left: 0; }
     header .slider span {
-      -webkit-transition: all 0.5s;
-      transition: all 0.5s;
+      -webkit-transition: all .2s ease-in-out;
+      -moz-transition: all .2s ease-in-out;
+      -ms-transition: all .2s ease-in-out;
+      -o-transition: all .2s ease-in-out;
+      transition: all .2s ease-in-out;
       width: 29px;
       height: 29px;
       padding: 0 3px; }
@@ -64,8 +86,11 @@ header {
     -moz-box-shadow: 0px -12px 20px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0px -12px 20px 0px rgba(0, 0, 0, 0.25); }
     header nav a {
-      -webkit-transition: all 0.5s;
-      transition: all 0.5s;
+      -webkit-transition: all .2s ease-in-out;
+      -moz-transition: all .2s ease-in-out;
+      -ms-transition: all .2s ease-in-out;
+      -o-transition: all .2s ease-in-out;
+      transition: all .2s ease-in-out;
       display: inline-block;
       width: 320px;
       height: 82px; }
