--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ h1 {
   font-size: 32px;
   line-height: 37px;
   color: #000;
-  margin-bottom: 10px; }
+  margin: 0 0 10px 0; }
 
 body, h3 {
   font-family: 'proxima-nova', 'Helvetica', sans-serif;
@@ -118,16 +118,24 @@ header {
 
 main {
   margin-top: 35px; }
-  main .news-feed ul {
-    list-style: none;
-    margin-left: 0;
-    padding-left: 0; }
-    main .news-feed ul h3 {
-      line-height: 16px; }
-    main .news-feed ul p {
-      margin: 0 0 15px 0; }
-    main .news-feed ul li {
-      margin-bottom: 15px;
-      border-bottom: 1px solid #d3d3d3; }
+  main .news-feed {
+    float: left;
+    max-width: 365px; }
+    main .news-feed ul {
+      list-style: none;
+      margin-left: 0;
+      padding-left: 0; }
+      main .news-feed ul h3 {
+        line-height: 16px; }
+      main .news-feed ul p {
+        margin: 0 0 15px 0; }
+      main .news-feed ul li {
+        margin-bottom: 15px;
+        border-bottom: 1px solid #d3d3d3; }
+  main .video {
+    float: right; }
+    main .video iframe {
+      width: 545px;
+      height: 300px; }
 
 /*# sourceMappingURL=styles.css.map */
