--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,7 +150,7 @@ main {
   overflow: hidden; }
   main .news-feed {
     float: left;
-    max-width: 365px; }
+    width: 38%; }
     main .news-feed ul {
       list-style: none;
       margin-left: 0;
