--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,3 +1,9 @@
+/*
+ *	Main stylesheet for Big Ears Splash Page
+ *		@author Miranda Johnson miranda.j.johnson@gmail.com
+ *		@date 09/17/2015
+*/
+
 // Hex colors
 $text: #686b72;
 $primaryBg: #f2f2f2;
