--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+/*
+ *	Main stylesheet for Big Ears Splash Page
+ *		@author Miranda Johnson miranda.j.johnson@gmail.com
+ *		@date 09/17/2015
+*/
 body {
   background-color: #f2f2f2;
   color: #686b72;
